# homaps

./: .gitignore  app.js  index.html  package.json  splashscreen.html
src/: App.tsx  Button.tsx  Colors.ts  EventForm.tsx  HabitForm.tsx  Heatmap.tsx  Models.ts  SwitchButton.tsx  Tooltip.tsx  main.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  sqlite.db  sqlite.db-shm  sqlite.db-wal  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/scss/: _button.scss  _form.scss  _heatmap.scss  _home.scss  _switch.scss  _switchButton.scss  _tooltip.scss  _variables.scss  index.scss
